--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/fig-cake.html">Fig Cake</a>
     </body>
 
 </html>
