Finish first 3 recipe pages

--- a/recipes/grilled-chicken-thighs.html
+++ b/recipes/grilled-chicken-thighs.html
@@ -7,6 +7,40 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Grilled Chicken Thighs</h1>
+    <h1> Grilled Chicken Thighs</h1>
+    
+    <img src="../img/grilledChickenThighs.png">
+
+    <h2>Description</h2>
+    <p>
+        If you're a grilled chicken thigh and Asian food fan, you're in for a treat. 
+        This marinade has the perfect combination of savory-sweet-spicy-salty, 
+        and these juicy thighs will make your entire family happy. 
+        Serving suggestions would be jasmine rice, grilled or stir-fried veggies, or a chilled cucumber salad. 
+        Garnish with chopped cilantro and serve with lime wedges on the side.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/4 cup soy sauce</li>
+        <li>1/4 cup fish sauce</li>
+        <li>3 tablespoons brown sugar</li>
+        <li>2 tablespoons chopped cilantro</li>
+        <li>1 tablespoon sesame oil</li>
+        <li>1 tablespoon minced fresh ginger root</li>
+        <li>1 tablespoon Sriracha sauce</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>1 tablespoon lime juice</li>
+        <li>1 teaspoon lemongrass paste (such as Gourmet Garden®)</li>
+        <li>2 pounds boneless, skinless chicken thighs</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Whisk soy sauce, fish sauce, brown sugar, cilantro, sesame oil, ginger, Sriracha, garlic, lime juice, and lemongrass paste together in a bowl.</li>
+        <li>Put chicken thighs in a resealable plastic bag, pour marinade over chicken, and marinate for 2 hours or overnight for an even better flavor.</li>
+        <li>Preheat the grill to medium-high heat and oil the grate.</li>
+        <li>Remove chicken thighs from marinade, discarding marinade.</li>
+        <li>Grill chicken thighs until they are no longer pink in the center and the juices run clear, about 3 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+        <li>Remove from grill and allow to rest for a few minutes before serving.</li>
+    </ol>
 </body>
 </html>
