--- a/recipes/pork-chop.html
+++ b/recipes/pork-chop.html
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Pork-Chop</h1>
+    <h1>Pork Chop</h1>
+    <img src="../img/porkchop.png">
+
+    <h2>Description</h2>
+    <p>Bursting with flavor and perfect for a light summer dinner, these Greek-inspired pork chops are anything but boring. 
+        The pork is well seasoned and the flavor is amplified through the caramelization that occurs during searing. 
+        The bright acidity is balanced out with salty, brininess from the olives and feta.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 (5 ounce) boneless, center-cut pork chops</li>
+        <li>1 tablespoon Greek seasoning</li>
+        <li>3 tablespoons olive oil, divided</li>
+        <li>1 pint cherry tomatoes, halved</li>
+        <li>1/2 teaspoon kosher salt</li>
+        <li>1/4 teaspoon ground black pepper</li>
+        <li>1/4 cup sliced Kalamata olives</li>
+        <li>1 medium lemon, juiced</li>
+        <li>1/4 cup crumbled feta cheese</li>
+        <li>1 tablespoon chopped fresh flat-leaf parsley</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Place pork chops between sheets of plastic wrap or parchment paper and pound to flatten to 1/2-inch thickness. Season both sides of the chops evenly with Greek seasoning.</li>
+        <li>Heat a large nonstick skillet over medium-high heat. Add 1 tablespoon oil. Place 2 chops in the hot skillet and sear for 2 minutes. Flip and cook until chops are no longer pink in the center, or to desired degree of doneness, 2 to 4 more minutes. Set aside and keep warm. Add 1 tablespoon oil to the skillet and repeat to cook remaining 2 chops.</li>
+        <li>Add remaining 1 tablespoon oil to the skillet. Add tomatoes and sprinkle with salt and pepper. Cook, stirring occasionally, until tomatoes are slightly blistered and softened, about 3 minutes. Add olives and lemon juice and cook for 2 minutes.</li>
+        <li>Serve tomato mixture over pork chops and sprinkle each serving with feta cheese and parsley.</li>
+    </ol>
 </body>
 </html>
