--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/fig-cake.html">Fig Cake</a>
+        <ul>
+            <li><a href="recipes/fig-cake.html">Fig Cake</a></li>
+            <li><a href="recipes/grilled-chicken-thighs.html">Grilled Chicken Thighs</a></li>
+            <li><a href="recipes/pork-chop.html">Pork Chop</a></li>
+        </ul>
+        
     </body>
 
 </html>
